# tuistore

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
demo/: _render.sh  scrape_demo.py
packaging/aur/: PKGBUILD  README.md
tests/: test_cli.py  test_footer.py  test_how_installed.py  test_install_modal.py  test_installed.py  test_installer.py  test_macos.py  test_packaging.py  test_publish_workflow.py  test_scrape.py
tools/: build_catalog.py
tuistore/: __init__.py  __main__.py  app.py  catalog.py  github.py  installed.py  installer.py  platform.py  scrape.py
tuistore/data/: catalog.json
