[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tuistore"
version = "0.3.3"
description = "🛍️  The TUI app store — browse, search, and one-key install hundreds of terminal apps, right from your terminal"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Gheat" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "ricekit @ git+https://github.com/Gheat1/ricekit",
]
keywords = ["tui", "terminal", "textual", "app-store", "package-manager", "awesome-tuis"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://github.com/Gheat1/tuistore"
Repository = "https://github.com/Gheat1/tuistore"
Issues = "https://github.com/Gheat1/tuistore/issues"

[project.scripts]
tuistore = "tuistore.__main__:main"

[tool.setuptools]
packages = ["tuistore"]

[tool.setuptools.package-data]
tuistore = ["data/*.json"]
